@@ -57,3 +57,4 @@
   22-Mar-2023  - V0.65 Add timeout to IMGT data file fetch, and update py-rcsb_exdb_assets locators
   24-Mar-2023  - V0.66 In PharosTargetProvider(), download sql file to separate dir
   11-Apr-2023  - V0.67 Fix issue with lineage tree building--handle cases with two parents at same depth; Add treeNodeList building and exporting
+  13-Apr-2023  - V0.68 Fix issue with treeNodeList provider
